--- a/index.html
+++ b/index.html
@@ -10,7 +10,10 @@
 <body>
 
     <div class="card">
-        <div class="familymembers"></div>
+        <div class="familymembers">
+            <div id="client"></div>
+            <div class="members"></div>
+        </div>
         <div class="card-header">
             <h1>ACCIDENTAL HOSPITALIZATION</h1>
             <div class="button-row">
@@ -218,24 +221,24 @@
     <div class='inputbox-row'>
     <div class='inputbox'>
             <div>
-                    <label for="day">$</label>
-                    <input class='dayinput' type='text' name='day' autocomplete="off" id='day'/>
+                    <label for="monthone">$</label>
+                    <input class='monthinput greeninput' placeholder="monthly amount..." type='text' name='monthone' autocomplete="off" id='monthone'/>
                 </div>   
                     <br/>
                 <div>
-                    <label for="month">$</label>
-                    <input class='monthinput' type='text' name='month' autocomplete="off" id='month'/>
+                    <label for="dayone">$</label>
+                    <input class='dayinput greeninput' type='text' placeholder="daily rate" name='dayone' autocomplete="off" id='dayone'/>
                 </div> 
     </div>
     <div class='inputbox'>
             <div>
-                    <label for="day">$</label>
-                    <input class='dayinputtwo' type='text' name='day' autocomplete="off" id='day'/>
+                    <label for="monthtwo">$</label>
+                    <input class='monthinputtwo greeninput' placeholder="monthly amount..." type='text' name='monthtwo' autocomplete="off" id='monthtwo'/>
                 </div>   
                     <br/>
                 <div>
-                    <label for="month">$</label>
-                    <input class='monthinputtwo' type='text' name='month' autocomplete="off" id='month'/>
+                    <label for="day">$</label>
+                    <input class='dayinputtwo greeninput' placeholder="daily rate" type='text' name='daytwo' autocomplete="off" id='daytwo'/>
                 </div> 
     </div>
     </div>
