--- a/index.html
+++ b/index.html
@@ -243,6 +243,48 @@
     </div>
     </div>
 
+
+
+    <div class="addspousemodal">
+        <h3>Add Spouse:</h3>
+        <div class='card'>
+            <label for="name">Name:</label>
+            <input type='text' id='name' name='name' placeholder='name...' autoComplete='off'>
+            <div class='bdayflex'>
+                <label for="monthselect">Month:</label>
+                <select id='monthselect'></select>
+                <label for="dayselect">Day:</label>
+                <select id='dayselect'
+                        value='1960'></select>
+                <label for="year">Year:</label>
+                <select id='year'></select>
+                <button class='enterSpouseBtn'>Enter</button>
+            </div>
+          
+        </div>
+    </div>
+
+
+
+    <div class="addchildmodal">
+        <h3>Add Child:</h3>
+        <div class='card'>
+            <label for="childname">Name:</label>
+            <input type='text' id='childname' name='childname' placeholder='name...' autoComplete='off'>
+            <div class='bdayflex'>
+                <label for="monthselect">Month:</label>
+                <select id='childmonthselect'></select>
+                <label for="dayselect">Day:</label>
+                <select id='childdayselect'
+                        value='1960'></select>
+                <label for="year">Year:</label>
+                <select id='childyear'></select>
+                <button class='enterChildBtn'>Enter</button>
+            </div>
+          
+        </div>
+    </div>
+
     <script src="script.js"></script>
 </body>
 </html>
